[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Main/Demo.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=2]
[ext_resource path="res://src/Main/ServerConnection.gd" type="Script" id=3]
[ext_resource path="res://src/UI/ParallaxBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/MouseCamera2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/Elements/DebugPanel.gd" type="Script" id=6]
[ext_resource path="res://src/UI/ChatBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UI/Components/NotificationList.tscn" type="PackedScene" id=8]

[node name="Demo" type="Node"]
script = ExtResource( 1 )

[node name="ServerConnection" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="MouseCamera2D" parent="." instance=ExtResource( 5 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="DebugPanel" type="Panel" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -284.0
margin_right = 425.0
margin_bottom = 284.0
theme = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DebugPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatBox" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="NotificationList" parent="CanvasLayer" instance=ExtResource( 8 )]
[connection signal="chat_message_received" from="ServerConnection" to="." method="_on_ServerConnection_chat_message_received"]
[connection signal="user_joined" from="ServerConnection" to="." method="_on_ServerConnection_user_joined"]
[connection signal="user_left" from="ServerConnection" to="." method="_on_ServerConnection_user_left"]
[connection signal="text_sent" from="CanvasLayer/ChatBox" to="." method="_on_ChatBox_text_sent"]
